--- a/functions/gen-opengraph-image/package.json
+++ b/functions/gen-opengraph-image/package.json
@@ -10,7 +10,9 @@
     "playwright-core": "^0.11.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-textfit": "^1.1.0"
+    "react-textfit": "1.1.0",
+    "react-twemoji": "0.2.3",
+    "twemoji": "12.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
